feat: Module 03 - Complete Authentication System
- Added AuthController with /api/auth/register, /api/auth/login, /api/auth/refresh, /api/auth/logout, and /api/auth/me
- Implemented AuthService and AuthServiceImpl with BCrypt password encryption and token lifecycle
- Added RefreshToken entity and RefreshTokenRepository with persistent token revocation
- Added UserPrincipal implementing UserDetails and updated UserDetailsServiceImpl to query UserRepository
- Enhanced JwtTokenProvider for access token generation, validation, and claim extraction
- Configured SecurityConfig with public endpoints (/api/auth/register, /login, /refresh, /health) and protected endpoints
- Created DTOs: RegisterRequest, LoginRequest, RefreshTokenRequest, AuthResponse, UserResponse
- Created authentication exceptions with GlobalExceptionHandler mappings (401, 409, 400)
- Added schema DDL for refresh_tokens in schema.sql
- Added unit tests for AuthService in AuthServiceTest